force-app/main/default/objects/Tarea_creacion_de_codigo__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código</label>
    <length>25</length>
    <type>Text</type>
</CustomField>