force-app/main/default/objects/Tarea_creacion_de_codigo__c/fields/Correlativo__c.field-meta.xml
<CustomField>
    <fullName>Correlativo__c</fullName>
    <formula>Solicitud_de_Oferta__r.Correlativo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correlativo</label>
    <type>Text</type>
</CustomField>