force-app/main/default/objects/Tarea_creacion_de_codigo__c/fields/Estado_de_la_Tarea__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_Tarea__c</fullName>
    <label>Estado de la Tarea</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitado</fullName>
                <default>true</default>
                <label>Solicitado</label>
            </value>
            <value>
                <fullName>Código creado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>