force-app/main/default/objects/Tarea_creacion_de_codigo__c/fields/Motivo_de_la_tarea__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_la_tarea__c</fullName>
    <label>Motivo de la tarea</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>