force-app/main/default/objects/Tarea_creacion_de_codigo__c/fields/Nombre_de_la_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_cuenta__c</fullName>
    <formula>Solicitud_de_Oferta__r.Nombre_de_la_cuenta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de la cuenta</label>
    <type>Text</type>
</CustomField>