force-app/main/default/objects/Tarea_creacion_de_codigo__c/fields/Solicitud_de_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Oferta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitud de Oferta</label>
    <referenceTo>Solicitud_de_Oferta__c</referenceTo>
    <relationshipName>Tareas_SO</relationshipName>
    <type>Lookup</type>
</CustomField>